- Added an ability to set your own custom avatar, up to 64x64 pixels