@@ -6,6 +6,7 @@ voicechat = PluginClass:new(
 
 function voicechat:init()
   self:_loadConfig()
+  widget.setChecked("btnCkVoice", root.getConfiguration("scc_voice_enable_by_default") or false)
   voice.setEnabled(widget.getChecked("btnCkVoice"))
 end
 
